--- a/css/auth.css
+++ b/css/auth.css
@@ -146,7 +146,7 @@ button:hover {
 }
 
 .login-password,
-.register-fecha {
+.register-foto {
   padding-bottom: 10px;
 }
 
@@ -225,4 +225,26 @@ input[type="file"]::file-selector-button {
 /* 3. Efecto hover para el botón */
 input[type="file"]::file-selector-button:hover {
     background-color: #005014; /* Verde más oscuro al pasar el ratón */
+}
+
+.googleauth {
+display: flex;
+align-items: center;
+justify-content: center;
+background-color: white;
+color: #757575;
+border: 1px solid #ddd;
+border-radius: 4px;
+padding: 10px;
+text-decoration: none;
+font-family: Arial, sans-serif;
+font-weight: 500;
+box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+width: 100%;
+box-sizing: border-box;
+padding-bottom: 10px;
+}
+
+.change_auth {
+  padding-top: 10px;
 }
